kubernetes/specs/deployments/agent-sandboxes/network-policy.yaml
# k3s has embedded kube-router
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-lan
  namespace: agent-sandboxes
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: sandbox-instance
  policyTypes:
    - Egress
  egress:
    # ALWAYS ALLOW DNS RESOLUTION FIRST
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # ALLOW PUBLIC INTERNET ONLY (EXCLUDING ALL PRIVATE LANS)
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
